# Visual_Primacy_Bias_Overr_Supplementary-Material

Visual Primacy Bias Code/: README.md  pyproject.toml
Visual Primacy Bias Code/configs/: default.yaml
Visual Primacy Bias Code/scripts/: __init__.py  generate_results.py  run_analysis.py  run_attack.py  run_defense_eval.py
Visual Primacy Bias Code/src/: __init__.py
Visual Primacy Bias Code/src/analysis/: __init__.py  attention.py  attribution.py  transfer.py
Visual Primacy Bias Code/src/baselines/: __init__.py  direct.py  figstep.py  gcg.py  pgd.py  umk.py
Visual Primacy Bias Code/src/data/: __init__.py  jailbreakv.py  mm_safetybench.py
Visual Primacy Bias Code/src/defenses/: __init__.py  input_level.py  model_level.py  prompt_level.py
Visual Primacy Bias Code/src/evaluation/: __init__.py  asr.py  ocr.py
Visual Primacy Bias Code/src/experiments/: __init__.py  runner.py
Visual Primacy Bias Code/src/models/: __init__.py  config.py  gpt4v.py  instructblip.py  interface.py  llava.py  qwen.py  results.py
Visual Primacy Bias Code/src/rendering/: __init__.py  background.py  pipeline.py
Visual Primacy Bias Code/src/scoring/: __init__.py  gradient_scorer.py
Visual Primacy Bias Code/src/visualization/: __init__.py  attention.py  defense.py  latex_export.py  tsne.py
